Final Test Revisions
Wasn't sure how to fix the css without breaking the css so i just touched up the homepage to make it less barren

--- a/AngularGameDatabase/client/css/enter.css
+++ b/AngularGameDatabase/client/css/enter.css
@@ -43,6 +43,7 @@ body { color: #666666;
              background-color: #FFFFFF;
 			 background-image: url("backgroundgames.jpg");
 				font-family: Arial, Verdana, sans-serif; }
+#hpul { color: #c77b00;}
 h1 { color: #000000;
 			background-color: #cf0000;
 			background-image: url("");
